why did i make a person